--- a/cnwebsite/versioned_docs/version-0.67/_markdown-m1-cocoapods.mdx
+++ b/cnwebsite/versioned_docs/version-0.67/_markdown-m1-cocoapods.mdx
@@ -1,11 +1,11 @@
 <details>
-    <summary>Note for Mac M1 users</summary>
+    <summary>Mac M1 的注意事项</summary>
 
-Mac M1 architecture is not directly compatible with Cocoapods. If you encounter issues when installing pods, you can solve it by running:
+Cocoapods 目前在 Mac M1 架构上可能还有一些兼容问题（我们建议使用`brew install cocoapods`来安装 Cocoapods）。如果你在安装 pods 依赖时出现问题，可以尝试运行下面的命令： 
 
 - `sudo arch -x86_64 gem install ffi`
 - `arch -x86_64 pod install`
 
-These commands install the `ffi` package, to load dynamically-linked libraries and let you run the `pod install` properly, and runs `pod install` with the proper architecture.
+以上命令会安装`ffi`包，用于在安装和装载 pods 时调用合适的系统架构。
 
 </details>
