--- a/cndocs/_markdown-new-architecture-warning.mdx
+++ b/cndocs/_markdown-new-architecture-warning.mdx
@@ -1,4 +1,4 @@
-:::注意
+:::caution 注意
 
 这个文档仍然是**实验性**的，随着我们的迭代，细节会有变化。欢迎在[工作小组内的讨论](https://github.com/reactwg/react-native-new-architecture/discussions/8)中分享你的反馈。
 
