--- a/cnwebsite/versioned_docs/version-0.71/_markdown-new-architecture-warning.mdx
+++ b/cnwebsite/versioned_docs/version-0.71/_markdown-new-architecture-warning.mdx
@@ -1,7 +1,7 @@
-:::caution
+:::caution 注意
 
-This documentation is still **experimental** and details are subject to changes as we iterate. Feel free to share your feedback on the [discussion inside the working group](https://github.com/reactwg/react-native-new-architecture/discussions/8) for this page.
+这个文档仍然是**实验性**的，随着我们的迭代，细节会有变化。欢迎在[工作小组内的讨论](https://github.com/reactwg/react-native-new-architecture/discussions/8)中分享你的反馈。
 
-Moreover, it contains several **manual steps**. Please note that this won't be representative of the final developer experience once the New Architecture is stable. We're working on tools, templates and libraries to help you get started fast on the New Architecture, without having to go through the whole setup.
+此外，它还包含几个**手动步骤**。请注意新架构尚未稳定下来，最终的开发者体验会继续迭代改善。我们正在努力开发工具、模板和库，以帮助你在新架构上快速入门，而不需要经历整个设置过程。
 
 :::
