--- a/cnwebsite/versioned_docs/version-0.72/the-new-architecture/_markdown_native_deprecation.mdx
+++ b/cnwebsite/versioned_docs/version-0.72/the-new-architecture/_markdown_native_deprecation.mdx
@@ -1,4 +1,4 @@
 :::info 提示
-Native Module and Native Components are our stable technologies used by the legacy architecture.
-They will be deprecated in the future when the New Architecture will be stable. The New Architecture uses [TurboModule](./the-new-architecture/pillars-turbomodules) and [Fabric Components](./the-new-architecture/pillars-fabric-components) to achieve similar results.
+原生模块和原生组件是我们传统架构中使用的稳定技术。
+当新架构稳定后，它们将被弃用。新架构使用[TurboModule](./the-new-architecture/pillars-turbomodules)和[Fabric 组件](./the-new-architecture/pillars-fabric-components)来实现类似的功能。
 :::
